// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tablink renders 1`] = `
<a
  className="sc-uoHVL gWnMZ"
/>
`;

exports[`Tablink renders Href 1`] = `
<a
  className="sc-uoHVL gWnMZ"
  href="www.google.com"
/>
`;

exports[`Tablink renders count 1`] = `
<a
  className="sc-uoHVL gWnMZ"
>
  <span
    className="sc-jmjsKF bAQKPO"
  >
    2
  </span>
</a>
`;

exports[`Tablink renders element left 1`] = `
<a
  className="sc-uoHVL gWnMZ"
>
  <div
    className="sc-hsfgio ekYLmC"
  >
    <span>
      Element
    </span>
  </div>
</a>
`;

exports[`Tablink renders isTop 1`] = `
<a
  className="sc-uoHVL coSdkc"
/>
`;

exports[`Tablink renders size 1`] = `
<a
  className="sc-uoHVL hItmJc"
  size="small"
/>
`;
